--- a/ai-fullstack-starter/docker-compose.yml
+++ b/ai-fullstack-starter/docker-compose.yml
@@ -23,7 +23,7 @@ services:
   backend:
     build:
       context: ./backend
-    container_name: {{ project_slug }}-backend
+    container_name: ai-fullstack-starter-backend
     env_file:
       - ./.env
       - ./backend/.env
@@ -42,7 +42,7 @@ services:
       context: ./frontend
       args:
         NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://localhost:8000}
-    container_name: {{ project_slug }}-frontend
+    container_name: ai-fullstack-starter-frontend
     env_file:
       - ./.env
       - ./frontend/.env.local
