--- a/ai-fullstack-starter/backend/pyproject.toml
+++ b/ai-fullstack-starter/backend/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
   "fastapi>=0.111.0",
   "uvicorn[standard]>=0.30.0",
   "pydantic-settings>=2.3.0",
-  "httpx>=0.27.0"
+  "httpx>=0.27.0",
+  "openai>=1.40.0",
+  "google-generativeai>=0.8.0"
 ]
 
 [project.optional-dependencies]
